VariableExpressionUpdater with tests