@@ -74,6 +74,8 @@
 						--add-opens
 						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.expression.evaluator=ALL-UNNAMED
 						--add-opens
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.expression.updater=ALL-UNNAMED
+						--add-opens
 						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator=ALL-UNNAMED
 						--add-opens
 						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.calculator.arithmetic=ALL-UNNAMED
